[package]
name = "py32f030"
version = "0.1.0"
edition = "2021"

[dependencies]
py32-bind-hal = { version = "0.5", path = "../../" }


cortex-m-semihosting = { version = "0.5" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }

defmt-rtt = "0.4"
defmt = { version = "0.3"}

embassy-time = { version = "0.3.0", features = ["tick-hz-1_000"]}
embassy-executor = { version = "0.6", features = [
    "nightly",
    "integrated-timers",
    "arch-cortex-m",
    "executor-thread",
] }


embedded-hal = "1.0.0-alpha.11"
embedded-hal-async = "1.0"
embedded-io = "0.6"



# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-


# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-